--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -53,16 +53,17 @@ Common bioinformatics file formats often include a set structure with the expres
 
 # Materials and methods 
 
+All resources for the paper are included in the public Github repository at github.com/M-PERSIC/Persico2022.git.
 
+The model contains two pipelines, one for Zstd custom dictionary generation and another for generating transcoded compression data using Bzip2, Xz, zLib, and Zstd compressors, with a general overview in @fig-model. Julia was chosen as there is package support for working with sequence data as well as for trivial transcoding of compressed or decompressed data via TranscodingStreams.jl wherein compression algorithm implementations are loaded as codecs[@sato]. A list of all direct dependencies can be found in the repository's Project.toml file. The Julia implementation operates by first unloading a tarball containing the set of FASTA training files into a Julia artifact, or life-cycled datastore. The files are plugged into Zstd's Dictionary API to generate a custom dictionary specific to that dataset. Random FASTA data is generated using BioSequences.jl[@biosequences] and FASTX.jl[@fastx] APIs which is then transcoded into compressed formats via the CodecBzip2.jl[@codecbzip2], CodecXz.jl[@codecxz], CodecZlib.jl[@codeczlib], and CodecZstd.jl[@codeczstd] codecs for comparative analysis. Both dictionary-based and default Zstd compression are applied to determine if the former desmontrates a significant reduction in data size.
 
-
-For the model implementation, Julia was chosen as there is package support for working with sequence data as well as for trivial transcoding of compressed or decompressed data via the TranscodingStreams package wherein compression algorithm implementations are loaded as codec I/O streams[@sato]. A list of all direct dependencies can be found in the repository's Project.toml file. The Julia implementation operates by first unloading a tarball containing the set of FASTA training files into an artifact, or life-cycled datastore. 
+![Overview of the Julia implementation for the compression model. **A**, Custom dictionary generation via an Julia artifact of FASTA files plugged into the Zstd Dictionary API. **B**, Transcoding randomly generated FASTA formatted data using TranscodingStreams.jl[@sato] compression codecs. ](/var/home/mpersico/distrobox/ubuntu-zstd/Persico2022/assets/figures/Compression_Pipeline_Model.png){#fig-model}
 
 # Results
 
 # Discussion
 
-The provided FASTA training dataset was retrieved from a set of \textit{E.coli} MS 200-1 strain genomic scaffolds from a whole genome shotgun run[@ncbi]. Sampling a single organism may allow for additional compression/decompression improvements as the sequence data could possess repeating patterns unique to that individual's or species' genome that are recognized and added to the Zstd dictionary during training. The FASTA files themselves may bear similarity with one another in the same set, such as each file being of similar length. Simultaneously, the Zstd dictionary may not achieve comparable compression/decompression performance when attempted on more dissimilar sequence data. Portability of Zstd dictionaries, in the sense of being universally applicable across all sequence data, could be weighed against generating dedicated dictionaries for specific datasets depending on the storage requirements.  Zstd parameters were kept default, though they can be manually assigned, including advanced compression options like compression job size or selecting from 22 predefined compression levels[@facebook].
+The provided FASTA training dataset was retrieved from a set of \textit{E.coli} MS 200-1 strain genomic scaffolds from a whole genome shotgun run[@ncbi]. Sampling a single organism may allow for additional compression/decompression improvements as the sequence data could possess repeating patterns unique to that individual's or species' genome that are recognized and added to the Zstd dictionary during training. The FASTA files themselves may bear similarity with one another in the same set, such as each file being of similar length. Simultaneously, the Zstd dictionary may not achieve comparable compression/decompression performance when attempted on more dissimilar sequence data. Portability of Zstd dictionaries, in the sense of being universally applicable across all sequence data, could be weighed against generating dedicated dictionaries for specific datasets depending on the storage requirements.  Zstd parameters were kept default, though they can be manually altered, including advanced compression options like compression job size or selecting from 22 predefined compression levels[@facebook].
 
 
 # Supporting information 
